--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
     <input type="text" name="cep" id="cep">
 
     <label for="estado">Estado</label>
-    <input type="text" name="estado" id="estado">
+    <input type="text" name="estado" id="estado" disabled>
 
     <label for="cidade">Cidade</label>
-    <input type="text" name="cidade" id="cidade">
+    <input type="text" name="cidade" id="cidade" disabled>
 
     <label for="bairro">Bairro</label>
-    <input type="text" name="bairro" id="bairro">
+    <input type="text" name="bairro" id="bairro" disabled>
 
     <label for="rua">Rua</label>
-    <input type="text" name="rua" id="rua">
+    <input type="text" name="rua" id="rua" disabled>
 
-    <input type="submit" value="Buscar">
   </form>
   <script src="script.js"></script>
 </body>
